# starpets_test

./: .env.dist  .flake8  .gitignore  README.md  mypy.ini  pyproject.toml  requirements.txt
src/: config.py  runner.py
src/app/: __init__.py  constants.py  request_schemas.py  users.py
src/app/database/: cli.py  database.py  models.py
src/app/database/repository/: base_repository.py  users_repository.py
src/app/exceptions/: base.py  users.py  weather.py
src/app/services/: weather.py
src/app/validators/: users.py
